npm install markdown-it --save

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "commander": "^2.14.1",
+    "markdown-it": "^8.4.2",
     "puppeteer": "^1.0.0"
   }
 }
